--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,30 +3,10 @@ options:
 
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args:
-      [
-        'build',
-        '--cache-from', 'gcr.io/jt-prd-financial-pa/github.com/miguelllamasjt/cloudrun:latest',
-        '-t', 'gcr.io/jt-prd-financial-pa/github.com/miguelllamasjt/cloudrun:$COMMIT_SHA',
-        '.'
-      ]
+    args: ['build', '-t', 'gcr.io/jt-prd-financial-pa/github.com/miguelllamasjt/cloudrun:$COMMIT_SHA', '.']
   - name: 'gcr.io/cloud-builders/docker'
-    args:
-      [
-        'push',
-        'gcr.io/jt-prd-financial-pa/github.com/miguelllamasjt/cloudrun:$COMMIT_SHA'
-      ]
+    args: ['push', 'gcr.io/jt-prd-financial-pa/github.com/miguelllamasjt/cloudrun:$COMMIT_SHA']
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
     args:
-      [
-        'run', 'deploy', 'cloudrun',
-        '--image', 'gcr.io/jt-prd-financial-pa/github.com/miguelllamasjt/cloudrun:$COMMIT_SHA',
-        '--region', 'europe-west1',
-        '--platform', 'managed',
-        '--allow-unauthenticated'
-      ]
-
-images:
-  - 'gcr.io/jt-prd-financial-pa/github.com/miguelllamasjt/cloudrun:$COMMIT_SHA'
-  - 'gcr.io/jt-prd-financial-pa/github.com/miguelllamasjt/cloudrun:latest'
+      ['run', 'deploy', 'cloudrun', '--image', 'gcr.io/jt-prd-financial-pa/github.com/miguelllamasjt/cloudrun:$COMMIT_SHA', '--region', 'europe-west1', '--platform', 'managed', '--allow-unauthenticated']
